# cregister

./: .gitignore  Makefile  README.md  main.c
c/: Makefile  main.c
c/lib/: cregister.h
c/src/: get_r15.c  get_r8.c  get_r9.c  get_rbp.c  get_rdi.c  get_rdx.c
lib/: cregister.h
rust/: Cargo.toml  build.rs
rust/src/: bindings.rs  lib.rs
src/: get_r10.c  get_r11.c  get_r12.c  get_r13.c  get_r14.c  get_rax.c  get_rcx.c  get_rsi.c  get_rsp.c  test.c
