[package]
name = "rust"
version = "0.1.0"
edition = "2024"
authors = ["Gabriel Saiago"]
readme = "../README.md"
description = "C ffi lib to read values from x86-64 GPRs"
repository = "https://github.com/Grsiago/cregister"
keywords = ["asm", "GPR", "assembly"]


[dependencies]

[build-dependencies]
bindgen = "0.71.1"
